testsuite/tests/splice-imports/SI18.stderr
SI18.hs:7:9: error: [GHC-28914]
    • Level error: ‘a’ is used at level 1 but it is bound at level 0
    • In the Template Haskell quotation: 'a

